<!-- fragment_top_row.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue_grey"
    tools:context="top_row">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:context="top_row">


        <ImageView
            android:id="@+id/backArrowImageView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/backarrow"
            android:contentDescription="@string/back_arr" />

        <!-- Title -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="7"
            android:text="@string/title_text"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <!-- Tab Icons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:cardElevation="50dp"
            app:cardBackgroundColor="@color/blue_grey"

            >
            <!-- Tab 1 Icon -->
            <ImageView
                android:id="@+id/tab1_View"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/tab1"
                android:contentDescription="@string/I_text1"
                 />

            <TextView
                android:id="@+id/t1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab1_text"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="16dp" />

        </androidx.cardview.widget.CardView>
        <!-- Tab 2 Icon -->
        <androidx.cardview.widget.CardView
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/blue_grey"
            app:cardElevation="50dp"


            >
            <!-- Tab 2 Icon -->
            <ImageView
                android:id="@+id/tab2_View"
                android:layout_width="28dp"
                android:layout_height="28sp"
                android:src="@drawable/tab2"
                android:contentDescription="@string/I_text2"
                />

            <TextView
                android:id="@+id/t2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab2_text"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="16dp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>